--- a/style.css
+++ b/style.css
@@ -1,16 +1,53 @@
 /*This is main stylesheet*/
 /*colour scheme*/
 /*red #F83603*/ 
-/*beige #D9D0C1*/
 /*cream #D9D6D2*/ 
 /*green #0CF25D*/ 
 /*light blue #DEEFE7*/ 
 /*grey #CACACA*/ 
 /*black #202022*/
 
-.beige {background-color:#D9D0C1;}
-.red {color:#F83603;}
-.grey {background-color:#CACACA;}
-.black {color:#202022;}
-.cream {color:#D9D6D2;}
-.green {color:#0CF25D;}
+
+
+.bg-blue{
+  background-color:#4542ff; 
+ padding:100px; margin:5px;}
+
+.bg-lightblue{background-color:#42c6ff ;padding:100px; margin:5px}
+
+.bg-red{color:#F83603;;padding:100px; margin:5px}
+
+.bg-grey{background-color:#858585;padding:100px; margin:5px}
+
+.bg-black{color:#202022;;padding:100px; margin:5px}
+
+.bg-cream{background-color:#f9dbae;;padding:100px; margin:5px}
+
+.bg-green{background-color:#48e56f;padding:100px; margin:5px}
+
+nav
+{background-color:#ed02ba;
+border:1px solid #8c1d8c;
+color:#ffffff;
+display:block;
+overflow:hidden;
+width:100%;}
+
+nav ul li{
+  display:inline-block;
+  list-style-type:none;
+}
+nav ul li a{
+  color:#000;
+  display: block;
+  line-height:56px;
+  text-decroation:none;
+  padding:10px;
+}
+
+nav ul li:hover{
+  background-color:#000;
+}
+nav ul li:hover a{
+  color:#ed02ba;
+}
