--- a/style.css
+++ b/style.css
@@ -7,27 +7,36 @@
 /*grey #CACACA*/ 
 /*black #202022*/
 
+h1{color:#000; padding:100px; margin:5px; text-align:center; }
+h2{color:#f7f7f7; padding:100px; margin:5px; text-align:center;}
+h3{color:#f7f7f7; padding:100px; margin:5px; text-align:center;}
+.bg-darkblue{background-color:#0400ff ;padding:20px; margin:5px; border:2px solid #000000;}
 
+.bg-purple{background:#c36dfd; ;padding:20px; margin:5px; border:2px solid #000000;}
 
-.bg-blue{
-  background-color:#4542ff; 
- padding:100px; margin:5px;}
+.bg-blue{background-color:#4c4ad9 ;padding:20px; margin:5px; border:2px solid #ffffff;}
 
-.bg-lightblue{background-color:#42c6ff ;padding:100px; margin:5px}
+.bg-lightblue{background-color:#42c6ff ;padding:20px; margin:0px; border:3px solid #fafafa;}
 
-.bg-red{color:#F83603;;padding:100px; margin:5px}
+.bg-maroon{background-color:#84102d ;padding:100px; margin:5px; border:2px solid #000 }
 
 .bg-grey{background-color:#858585;padding:100px; margin:5px}
 
-.bg-black{color:#202022;;padding:100px; margin:5px}
+.bg-white{color:#ffffff}
+
+.bg-black{background-color:#202022;;padding:100px; margin:5px; border:2px solid #000}
 
 .bg-cream{background-color:#f9dbae;;padding:100px; margin:5px}
 
-.bg-green{background-color:#48e56f;padding:100px; margin:5px}
+.bg-green{background-color:#48e56f;padding:100px; margin:0px; border:2px solid #ffffff;}
+
+.bg-pink{background-color:#ed02ba;padding:100px; margin:5px}
+
+.bg-yellow{background-color:#ffd500;padding:100px; margin:0px; border:2px solid #000000;}}
 
 nav
-{background-color:#ed02ba;
-border:1px solid #8c1d8c;
+{background-color:#c36dfd;
+border:2px solid #000000;
 color:#ffffff;
 display:block;
 overflow:hidden;
@@ -49,5 +58,10 @@ nav ul li:hover{
   background-color:#000;
 }
 nav ul li:hover a{
-  color:#ed02ba;
+  color:#06ed02;
 }
+
+footer{background-color:#c36dfd ;
+      color:#ffffff;
+      text-align:center;
+      padding:3px;}
