--- a/style.css
+++ b/style.css
@@ -7,16 +7,13 @@
 /*grey #CACACA*/ 
 /*black #202022*/
 
-h1{color:#000; padding:100px; margin:5px; text-align:center; }
-h2{color:#f7f7f7; padding:100px; margin:5px; text-align:center;}
-h3{color:#f7f7f7; padding:100px; margin:5px; text-align:center;}
-.bg-darkblue{background-color:#0400ff ;padding:20px; margin:5px; border:2px solid #000000;}
+
+.bg-blue{background-color:#0400ff ;padding:20px; margin:5px; border:2px solid #000000;}
 
 .bg-purple{background:#c36dfd; ;padding:20px; margin:5px; border:2px solid #000000;}
 
-.bg-blue{background-color:#4c4ad9 ;padding:20px; margin:5px; border:2px solid #ffffff;}
 
-.bg-lightblue{background-color:#42c6ff ;padding:20px; margin:0px; border:3px solid #fafafa;}
+.bg-lightblue{background-color:#42c6ff ;padding:20px; margin:5px; border:2px solid #000000;}
 
 .bg-maroon{background-color:#84102d ;padding:100px; margin:5px; border:2px solid #000 }
 
@@ -28,16 +25,16 @@ h3{color:#f7f7f7; padding:100px; margin:5px; text-align:center;}
 
 .bg-cream{background-color:#f9dbae;;padding:100px; margin:5px}
 
-.bg-green{background-color:#48e56f;padding:100px; margin:0px; border:2px solid #ffffff;}
+.bg-green{background-color:#48e56f; padding:20px; margin:5px; border:2px solid #000000;}
 
 .bg-pink{background-color:#ed02ba;padding:100px; margin:5px}
 
 .bg-yellow{background-color:#ffd500;padding:100px; margin:0px; border:2px solid #000000;}}
 
 nav
-{background-color:#c36dfd;
+{background-color: #48e56f;
 border:2px solid #000000;
-color:#ffffff;
+color:#fffafa;
 display:block;
 overflow:hidden;
 width:100%;}
@@ -47,10 +44,10 @@ nav ul li{
   list-style-type:none;
 }
 nav ul li a{
-  color:#000;
+  color:#000000;
   display: block;
   line-height:56px;
-  text-decroation:none;
+  text-decoration:none;
   padding:10px;
 }
 
@@ -58,10 +55,10 @@ nav ul li:hover{
   background-color:#000;
 }
 nav ul li:hover a{
-  color:#06ed02;
+  color:#fbfefb;
 }
 
-footer{background-color:#c36dfd ;
-      color:#ffffff;
+footer{background-color:#ffffff;
+      color:#000000;
       text-align:center;
       padding:3px;}
