--- a/style.css
+++ b/style.css
@@ -12,18 +12,13 @@
 
 .bg-purple{background:#c36dfd; ;padding:20px; margin:5px; border:2px solid #000000;}
 
-
 .bg-lightblue{background-color:#42c6ff ;padding:20px; margin:5px; border:2px solid #000000;}
 
 .bg-maroon{background-color:#84102d ;padding:100px; margin:5px; border:2px solid #000 }
 
-.bg-grey{background-color:#858585;padding:100px; margin:5px}
-
 .bg-white{color:#ffffff}
 
 .bg-black{background-color:#202022;;padding:100px; margin:5px; border:2px solid #000}
-
-.bg-cream{background-color:#f9dbae;;padding:100px; margin:5px}
 
 .bg-green{background-color:#48e56f; padding:20px; margin:5px; border:2px solid #000000;}
 
@@ -31,31 +26,39 @@
 
 .bg-yellow{background-color:#ffd500;padding:100px; margin:0px; border:2px solid #000000;}}
 
-nav
-{background-color: #48e56f;
-border:2px solid #000000;
-color:#fffafa;
-display:block;
-overflow:hidden;
-width:100%;}
+
+
+nav{
+  background-color:#48e56f;
+  border: 5px solid #000000;
+  color:#ffffff;
+  display:block;
+  overflow:hidden;
+  width:100%
+}
+
 
 nav ul li{
   display:inline-block;
   list-style-type:none;
 }
+
+
 nav ul li a{
   color:#000000;
-  display: block;
+  display:block;
   line-height:56px;
   text-decoration:none;
   padding:10px;
 }
 
-nav ul li:hover{
-  background-color:#000;
+ 
+nav ul li :hover{
+  background-color:#000000;
 }
+
 nav ul li:hover a{
-  color:#fbfefb;
+  color:#00ff00;
 }
 
 footer{background-color:#ffffff;
