--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 
 .bg-black{color:rgba(0,0,0,);}
 
-.bg-green{background-color:rgba(72,229,111,1); padding:20px; margin:5px; border:2px solid #000000;}
 
 nav
 {background-color:rgba(255,255,255,);
@@ -50,13 +49,52 @@ footer{background-color:rgba(255,255,255,);
       text-align:center;
       padding:3px;}
 
+
+/*tells the browser to account for any border and padding in */
+/*the values you specify for an element's width and height*/
+* {
+  box-sizing: border-box;
+}
+
+/* Create four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 25%;
+  padding: 20px;
+}
+
+/* Clear floats after the columns If an element is taller than the */
+/*element containing it, and it is floated, it will overflow outside of its container.*/
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
 /***this is style for tablet***/
 @media screen and (max-width: 992px){
-  
 .bg-green{background-color:rgba(72,229,111,0.5) ;padding:20px; margin:0px; border:2px solid #000000;
          }
+}
+  /* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 992px) {
+  .column {
+    width:50%; 
+    min-height:350px;
+  }
+}
+
 
 
 /***this is style for phone***/
 @media screen and (max-width: 600px){
-.bg-green{background-color:rgba(72,229,111,0.1) ;padding:20px; margin:0px; border:2px solid #000000;} }
+.bg-green{background-color:rgba(72,229,111,0.1) ;padding:20px; margin:0px; border:2px solid #000000;}
+}
+
+  /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  } 
+}
