--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@
 
 .bg-black{color:rgba(0,0,0,);}
 
+title{
+font-family: 'Pixelify Sans', cursive;  
+}
+
+h1{
+font-family: 'Dela Gothic One', cursive;}
+h2{
+font-family: 'Pixelify Sans', cursive;}
 
 nav
 {background-color:rgba(255,255,255,);
